--- a/index.html
+++ b/index.html
@@ -225,30 +225,30 @@
       <!-- STACK SECTION -->
       <!-- TRIED LANGUAGES LIST LOOP ON ROW  -->
       <section class="stacks">
-        <h1>MY TECH STACK (2024)</h1>
+        <h1>MY TECH STACK (2025)</h1>
         <div class="stack-wrapper">
           <ul class="stack-one">
             <li><span>HTML</span></li>
             <li><span>CSS</span></li>
-            <li><span>JAVASCIPT</span></li>
+            <li><span>TYPESCRIPT</span></li>
           </ul>
 
           <ul class="stack-two">
-            <li><span>REACT 18</span></li>
-            <li><span>BOOTSTRAP</span></li>
+            <li><span>NEXT JS</span></li>
+             <li><span>MATERIAL</span></li>
             <li><span>TAILWIND</span></li>
           </ul>
 
           <ul class="stack-three">
-            <li><span>NODE JS</span></li>
-            <li><span>EXPRESS JS</span></li>
-            <li><span>MONGODB</span></li>
+            <li><span>PYTHON</span></li>
+            <li><span>DJANGO</span></li>
+            <li><span>GRAPHQL</span></li>
           </ul>
 
           <ul class="stack-four">
-            <li><span>PYTHON</span></li>
-            <li><span>MYSQL</span></li>
-            <li><span>DJANGO</span></li>
+            <li><span>DOCKER</span></li>
+            <li><span>POSTGRESQL</span></li>
+            <li><span>LLM</span></li>
           </ul>
         </div>
       </section>
@@ -295,24 +295,24 @@
         <div class="roadmap-right-wrapper">
           <div class="roadmap-right">
             <div class="rightmap one">
-              <span>React-19</span>
-              <span>Compiler & Unit Testing</span>
+              <span>NEXT JS</span>
+              <span>Client Side SSR SGR</span>
             </div>
             <div class="rightmap two">
-              <span>NEXTJS</span>
-              <span>Client Side SSR SGR</span>
+              <span>PYTHON</span>
+              <span>DATA STRUCTURES AND ALGORITHMS</span>
             </div>
             <div class="rightmap three">
               <span>POSTMAN</span>
               <span>JSON Write & Handling </span>
             </div>
             <div class="rightmap four">
-              <span>MONGODB</span>
-              <span>Cluster And CRUD</span>
+              <span>POSTGRESQL</span>
+              <span>ORM And CRUD</span>
             </div>
             <div class="rightmap five">
-              <span>MYSQL</span>
-              <span>FULL SPEED OPTIMIZE</span>
+              <span>GRAPHQL API</span>
+              <span>ALL WITH SESSIONS</span>
             </div>
             <div class="rightmap six">
               <span>DJANGO</span>
